--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.cdnfonts.com/css/digital-7-mono");
+@import url("https://fonts.cdnfonts.com/css/digital-7-mono");
 body {
   max-width: 500px;
   margin: 0 auto;
